package(default_visibility = ["//visibility:public"])

cc_library(
    name = "lluvia",
    srcs = ["lluvia.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//mediapipe/framework:calculator_framework",
        "//mediapipe/framework/port:status",
        "@lluvia//lluvia/cpp/core:core_cc_library",
    ] + select({
        "//conditions:default": [
            "//mediapipe/util:resource_util",
        ],
        "//mediapipe:android": [
            "//mediapipe/util/android:asset_manager_util",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "lluvia_from_gpu_buffer",
    srcs = ["lluvia_from_gpu_buffer.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//mediapipe/gpu:gl_calculator_helper",
        "//mediapipe/framework:calculator_framework",
        "//mediapipe/framework:timestamp",
        "//mediapipe/framework/formats:image_frame",
        "//mediapipe/framework/port:ret_check",
        "//mediapipe/framework/port:status",
        "@lluvia//lluvia/cpp/core:core_cc_library",
    ] + select({
        "//conditions:default": [
            "//mediapipe/util:resource_util",
        ],
        "//mediapipe:apple": [
            "//mediapipe/objc:util"
        ],
        "//mediapipe:android": [
            "//mediapipe/util/android:asset_manager_util",
        ],
    }),
    alwayslink = 1,
)
