

package(default_visibility = [
    "//visibility:public",
])


cc_binary(
    name = "single_image",
    srcs = [
        "main.cc"
    ],
    deps = [
        "//mediapipe/lluvia-mediapipe/calculators:lluvia_calculator",
        "//mediapipe/lluvia-mediapipe/calculators:lluvia_calculator_cc_proto",

        "//mediapipe/framework:calculator_framework",
        "//mediapipe/framework/formats:image_frame_opencv",
        "//mediapipe/framework/formats:image_frame",
        "//mediapipe/framework/port:file_helpers",
        "//mediapipe/framework/port:opencv_highgui",
        "//mediapipe/framework/port:opencv_imgproc",
        "//mediapipe/framework/port:opencv_video",
        "//mediapipe/framework/port:parse_text_proto",
        "//mediapipe/framework/port:status",
        "//mediapipe/gpu:gl_calculator_helper",
        "//mediapipe/gpu:gpu_buffer",
        "//mediapipe/gpu:gpu_shared_data_internal",
        
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        
        "@bazel_tools//tools/cpp/runfiles:runfiles",
    ],
    data = [
        "@lluvia//lluvia/nodes:lluvia_node_library",
    ]
)
