load(
    "//mediapipe/framework/tool:mediapipe_graph.bzl",
    "mediapipe_binary_graph",
)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "calculators",
    deps = [
        "//mediapipe/calculators/core:flow_limiter_calculator",
        "//mediapipe/gpu:gpu_buffer_to_image_frame_calculator",
        "//mediapipe/gpu:image_frame_to_gpu_buffer_calculator",
        "//mediapipe/lluvia-mediapipe/calculators:lluvia_calculator",
    ],
)

mediapipe_binary_graph(
    name = "binary_graph",
    graph = "color_mapping.pbtxt",
    output_name = "color_mapping.binarypb",
    deps = [
        ":calculators",
        "//mediapipe/lluvia-mediapipe/calculators:lluvia_calculator",
    ],
)

filegroup(
    name = "runfiles",
    srcs = [
        "color_mapping.lua",
    ],
)
