#load("//mediapipe/mpgenius/bazel:defs.bzl", "mediapipe_aar", "proto_java_src_generator")
load("//mediapipe/java/com/google/mediapipe:mediapipe_aar.bzl", "mediapipe_aar")
load("@lluvia//lluvia/bazel/node:def.bzl", "ll_node_library")
load("@lluvia//lluvia/nodes:def.bzl", "LLUVIA_NODE_LIBRARY_NODES", "LLUVIA_NODE_LIBRARY_STRIP_PREFIX")

package(default_visibility = ["//visibility:public"])

# bazel build -c opt --host_crosstool_top=@bazel_tools//tools/cpp:toolchain --fat_apk_cpu=arm64-v8a,armeabi-v7a //mediapipe/mplluvia/java/ai/lluvia:lluvia_aar

# the node library needs to be built in this workspace so that the AAR target can package it.
ll_node_library(
    name = "lluvia_node_library",
    nodes = LLUVIA_NODE_LIBRARY_NODES,
    strip_prefix = LLUVIA_NODE_LIBRARY_STRIP_PREFIX,
    visibility = ["//visibility:public"],
)

"""
bazel build -c opt --host_crosstool_top=@bazel_tools//tools/cpp:toolchain --fat_apk_cpu=arm64-v8a --define RULES_VULKAN_ANDROID=1 //mediapipe/lluvia-mediapipe/java/ai/lluvia:lluvia_aar; \
    rm -rf ~/git/lluvia-playground/app/libs/lluvia_aar.aar; \
    cp bazel-bin/mediapipe/lluvia-mediapipe/java/ai/lluvia/lluvia_aar.aar ~/git/lluvia-playground/app/libs/
"""

mediapipe_aar(
    name = "lluvia_aar",
    assets = [
        "//mediapipe/lluvia-mediapipe/graphs/mobile/passthrough:binary_graph",
        "//mediapipe/lluvia-mediapipe/graphs/mobile/HornSchunck:binary_graph",
        "//mediapipe/lluvia-mediapipe/graphs/mobile/HornSchunck:runfiles",
        "//mediapipe/lluvia-mediapipe/graphs/mobile/FlowFilter:binary_graph",
        "//mediapipe/lluvia-mediapipe/graphs/mobile/FlowFilter:runfiles",
        "//mediapipe/lluvia-mediapipe/graphs/mobile/ColorMapping:binary_graph",
        "//mediapipe/lluvia-mediapipe/graphs/mobile/ColorMapping:runfiles",
        ":lluvia_node_library",
    ],
    assets_dir = "",
    calculators = [
        "//mediapipe/lluvia-mediapipe/graphs/mobile/passthrough:calculators",
        "//mediapipe/lluvia-mediapipe/graphs/mobile/HornSchunck:calculators",
        "//mediapipe/lluvia-mediapipe/graphs/mobile/FlowFilter:calculators",
        "//mediapipe/lluvia-mediapipe/graphs/mobile/ColorMapping:calculators",
    ],
)
